# adventofcode

./: .gitignore  pyproject.toml  small_tree.sh  update-templates.sh  update_stats.sh
2015/: tree.sh
2015/day1/: main.py
2015/day10/: main.py
2015/day11/: main.py
2015/day12/: main.py
2015/day13/: main.py
2015/day14/: main.py
2015/day15/: main.py
2015/day16/: main.py
2015/day17/: main.py
2015/day18/: main.py
2015/day19/: main.py
2015/day2/: main.py
2015/day20/: main.py
2015/day21/: main.py
2015/day22/: main.py
2015/day23/: main.py
2015/day24/: main.py
2015/day25/: main.py
2015/day3/: main.py
2015/day4/: main.py
2015/day5/: main.py
2015/day6/: main.py
2015/day7/: main.py
2015/day8/: main.py
2015/day9/: main.py
2015/template/: main.py
2016/: run.sh
2016/day1/: main.py
2016/day2/: main.py
2016/day3/: main.py
2016/day4/: main.py
2016/day5/: main.py
2016/day6/: main.py
2016/day7/: main.py
2016/day8/: main.py  util.py
2016/day9/: main.py  test.py
2016/template/: main.py
2017/day1/: main.py
2017/day2/: main.py
2022/: run.sh
2022/day1/: main.py
2022/day10/: main.py  util.py
2022/day11/: main.py
2022/day12/: main.py
2022/day13/: main.py
2022/day14/: main.py
2022/day15/: main.py
2022/day16/: OLD_main.py  main.py  util.py
2022/day17/: main.py
2024/: README.md
2025/: README.md  small_tree.sh
day4/: main.py
day5/: main.py
util/: .gitignore  Cargo.toml  aoc_utils.py  pyproject.toml  test_aoc_utils.py
util/benches/: find.rs  find_all.rs
util/src/: grid.rs  lib.rs  parse.rs
(+82 files in other folders)
